--- a/src/layouts/general/General.module.css
+++ b/src/layouts/general/General.module.css
@@ -1,18 +1,16 @@
-/* .layout {
+.generalLayout {
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
     min-height: 100vh;
-    background-color: #9ed1c0;
-} */
+}
 
 .aside {
     min-width: 200px;
     width: 200px;
-    background: #d0d0d0;
+    background-color: #9ed1c0;
     display: flex;
     flex-direction: column;
+    border-right: 1px solid #000;
+    min-height: 100%;
 }
 
 .asideButton {
