--- a/src/styles/index.module.css
+++ b/src/styles/index.module.css
@@ -1,9 +1,12 @@
+* {
+    font-size: 18px;
+}
+
 .table {
-    border-spacing: 0;
+    border-spacing: 0px;
     border-collapse: separate;
     width: 100%;
     height: min-content;
-    font-size: 32px;
 }
 
 .table tr {
@@ -12,6 +15,10 @@
 
 .table th {
     background: #8ee286;
+    position: sticky;
+    top: 0;
+    z-index: 1;
+    border-bottom: 1px solid #6aa364;
 }
 
 .table tr:nth-child(2n + 1) {
@@ -20,4 +27,25 @@
 
 .table td, th {
     padding: 20px;
+    text-align: center;
+}
+
+.table td {
+    border-right: 1px solid #b1b0b0;
+}
+
+.button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 8px;
+    padding: 8px;
+    text-decoration: none;
+    color: #000;
+    border: 1px solid #6aa364;
+    background: #8ee286;
+    cursor: pointer;
+    width: 150px;
+    margin-left: auto;
+    margin-right: auto;
 }
