--- a/src/styles/index.module.css
+++ b/src/styles/index.module.css
@@ -49,3 +49,16 @@
     margin-left: auto;
     margin-right: auto;
 }
+
+.input, .filterField {
+    width: 100px;
+    border: 1px solid #6aa364;
+    background: #e6ffe4;
+    border-radius: 8px;
+    padding: 4px;
+    padding-left: 8px;
+}
+
+.filterField {
+    width: 200px;
+}
