--- a/src/styles/index.module.css
+++ b/src/styles/index.module.css
@@ -77,6 +77,7 @@
     background: #e6ffe4;
     border-radius: 0.3rem;
     padding: 0.5rem;
+    margin: 0.5rem;
     width: 1.5rem;
     height: 1.5rem;
     display: flex;
@@ -84,4 +85,18 @@
     justify-content: center;
     align-items: center;
     cursor: pointer;
+}
+
+.keyboard {
+    position: fixed;
+    z-index: 1;
+    bottom: 4rem;
+    left: 1rem;
+    background: #e6e6e6;
+    border: 1px solid #b1b0b0;
+    padding: 0.5rem;
+    border-radius: 0.3rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+
 }
